updated some error handling
