# routes/player_info.js
@@ -1,16 +1,28 @@
 const express = require('express');
 const router = express.Router();
+// const createError = require('http-errors');
 
-const contactsController = require('../controllers/player_info');
+const player_infoController = require('../controllers/player_info');
 
-router.get('/', contactsController.getAll);
+router.get('/', player_infoController.getAll); 
 
-router.get('/:id', contactsController.getSingle);
+router.get('/:id', player_infoController.getSingle);
+// router.get('/:id', async (req, res) => {
+//     const id = req.params.id;
+//     try {
+//         const player = await player_infoController.getSingle(id);
+//         if (!player) {
+//             throw createError(404, 'Player does not exist');
+//         }
+//         res.send(player);
+//       } catch (error) {
+//         console.log(error.message)
+//       }
+//     });
+router.post('/', player_infoController.createPlayer);
 
-router.post('/', contactsController.createPlayer);
+router.put('/:id', player_infoController.updatePlayer);
 
-router.put('/:id', contactsController.updatePlayer);
-
-router.delete('/:id', contactsController.deletePlayer);
+router.delete('/:id', player_infoController.deletePlayer);
 
 module.exports = router;
